<resources>
    <string name="app_name">WarShips</string>
    <string name="welcome">Welcome to WarShips</string>
    <string name="login">Login</string>
    <string name="user">User Name:</string>
    <string name="password">Password:</string>
    <string name="newGame">New Game</string>
    <string name="select">Select Option</string>
    <string name="host">Host Game</string>
    <string name="availableHosts">Available Hosts</string>
    <string name="join">Join Game</string>
    <string name="looking">Looking for Potential Game Hosts</string>
    <string name="waiting">Waiting for Another Player</string>
    <string name="menuActivity">WarShips Connection Menu</string>
    <string name="title_activity_war_ship_game">WarShipGame</string>
    <string name="sendMessageString">Send Turn</string>
    <string name="stopSearch">Stop Connection</string>
    <string name="OppGameBoard">Opponents Game Board</string>
    <string name="myGameBoard">My Game Board</string>
    <string name="viewOppGameBoard">Opponent GameBoard</string>
    <string name="viewMyGameBoard">My GameBoard</string>
    <string name="viewStats">Game Stats</string>
    <string name="welcomeUser">Welcome</string>
    <string name="gameStats">Game Stats</string>
    <string name="playerStats">Player Stats</string>

    <string name="numberShots">Shots: </string>
    <string name="numberHits">Hits: </string>

    <string name="numberGames">Games: </string>
    <string name="numberWins">Wins: </string>


    <string name="shotChoice">Current Choice</string>

    <string-array name="xAxis">
        <item>0</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
    </string-array>

    <string-array name="yAxis">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
<!--Game Board Strings-->
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="typeMessageHere">Type Message Here</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
