<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/mainFrame">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="project.mobile.warships.WarShipGame">

        <TextView
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/message"
            android:hint="message"
            android:gravity="center"
            android:layout_above="@+id/setMessageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />


        <EditText
            android:layout_width="1750dp"
            android:layout_height="45dp"
            android:id="@+id/setMessageView"
            android:hint="Type Message Here"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendMessageString"
            android:id="@+id/sendTurnButton"
            android:layout_above="@+id/message"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/myGameBoardButton"
            android:enabled="false"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/shotChoice"
            android:id="@+id/textView100"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp"
            android:gravity="center" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:id="@+id/currentMoveTextView"
            android:layout_below="@+id/textView100"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView100"
            android:hint="No Selection"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewMyGameBoard"
            android:id="@+id/myGameBoardButton"
            android:layout_above="@+id/oppGameBoardButton"
            android:layout_toStartOf="@+id/textView103" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewOppGameBoard"
            android:id="@+id/oppGameBoardButton"
            android:enabled="false"
            android:layout_above="@+id/sendTurnButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/myGameBoardButton" />

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_above="@+id/message"
            android:foregroundGravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/sendTurnButton"
            android:id="@+id/frameLayout"></FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewStats"
            android:id="@+id/textView103"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_alignBaseline="@+id/textView100"
            android:layout_alignBottom="@+id/textView100"
            android:layout_toEndOf="@+id/textView100"
            android:layout_marginStart="63dp" />

    </RelativeLayout>
</FrameLayout>